Sporadic xe_guc_tlb_invalidation_done_handler() warnings
[10220.146677] ------------[ cut here ]------------
[10220.146684] WARNING: CPU: 8 PID: 945138 at drivers/gpu/drm/xe/xe_gt_tlb_invalidation.c:322 xe_guc_tlb_invalidation_done_handler+0x196/0x1a0 [xe]
[10220.146768] Modules linked in: xe drm_ttm_helper gpu_sched drm_suballoc_helper i2c_algo_bit drm_buddy ttm drm_display_helper drm_kms_helper syscopyarea sysfillrect sysimgblt x86_pkg_temp_thermal mei_pxp mei_hdcp coretemp crct10dif_pclmul crc32_pclmul pmt_telemetry pmt_class ghash_clmulni_intel snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hwdep kvm_intel snd_hda_core e1000e mei_me snd_pcm ptp i2c_i801 mei i2c_smbus pps_core wmi_bmof intel_vsec video wmi fuse
[10220.146841] CPU: 8 PID: 945138 Comm: kworker/u32:0 Tainted: G W 6.3.0-rc4+zeh-xe+ #928
[10220.146845] Hardware name: Intel Corporation Raptor Lake Client Platform/RaptorLake-P LP5 RVP, BIOS RPLPFWI1.R00.4081.A00.2302200847 02/20/2023
[10220.146848] Workqueue: events_unbound g2h_worker_func [xe]
[10220.146910] RIP: 0010:xe_guc_tlb_invalidation_done_handler+0x196/0x1a0 [xe]
[10220.146968] Code: 50 3b cb e0 e9 0e ff ff ff e8 b6 65 ea e0 84 c0 0f 85 18 ff ff ff 0f 0b e9 11 ff ff ff 48 89 d7 e8 df c5 e1 e0 e9 1a ff ff ff <0f> 0b e9 aa fe ff ff 0f 1f 00 90 90 90 90 90 90 90 90 90 90 90 90
[10220.146971] RSP: 0018:ffffc900072d3db8 EFLAGS: 00010202
[10220.146976] RAX: 0000000000000000 RBX: ffff888119b33b10 RCX: 0000000000000001
[10220.146979] RDX: 0000000000000000 RSI: ffffffff82463fe0 RDI: ffffffff824d7ae7
[10220.146981] RBP: 0000000000000001 R08: 0000000000000001 R09: 0000000000000001
[10220.146983] R10: 0000000000000001 R11: ffff888171760990 R12: ffff888119b33e1c
[10220.146986] R13: ffff888119b33c10 R14: 0000000000000003 R15: ffff888119b30000
[10220.146988] FS: 0000000000000000(0000) GS:ffff8882a6600000(0000) knlGS:0000000000000000
[10220.146991] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[10220.146994] CR2: 00007f74d4000000 CR3: 000000011a256003 CR4: 0000000000770ee0
[10220.146997] PKRU: 55555554
[10220.146999] Call Trace:
[10220.147002] <TASK>
[10220.147006] dequeue_one_g2h+0x2d5/0x460 [xe]
[10220.147068] g2h_worker_func+0x55/0xd0 [xe]
[10220.147130] process_one_work+0x282/0x520
[10220.147142] worker_thread+0x4a/0x390
[10220.147149] ? __pfx_worker_thread+0x10/0x10
[10220.147154] kthread+0xed/0x120
[10220.147158] ? __pfx_kthread+0x10/0x10
[10220.147163] ret_from_fork+0x29/0x50
[10220.147176] </TASK>
[10220.147178] irq event stamp: 11922053
[10220.147181] hardirqs last enabled at (11922059): [<ffffffff811da469>] __up_console_sem+0x59/0x80
[10220.147186] hardirqs last disabled at (11922064): [<ffffffff811da44e>] __up_console_sem+0x3e/0x80
[10220.147189] softirqs last enabled at (11921368): [<ffffffff8114abae>] irq_exit_rcu+0xbe/0x130
[10220.147195] softirqs last disabled at (11921361): [<ffffffff8114abae>] irq_exit_rcu+0xbe/0x130
[10220.147199] ---[ end trace 0000000000000000 ]---
Warning line: XE_WARN_ON(expected_seqno != msg[0]);